--- a/src/main/resources/templates/settings/usdCourse.html
+++ b/src/main/resources/templates/settings/usdCourse.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Курс USD</title>
     <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-neptune/resources/theme-neptune-all.css}"/>
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
@@ -10,6 +10,5 @@
     <script type="text/javascript" th:src="@{/js/settings/usdCourse/app.js}"></script>
 </head>
 <body>
-<h1>Замена USD курса</h1>
 </body>
 </html>
