--- a/src/main/resources/static/js/settings/usdCourse/css/UsdCourse.css
+++ b/src/main/resources/static/js/settings/usdCourse/css/UsdCourse.css
@@ -25,3 +25,7 @@
 .fa-rotate-right {
     color: #404040;
 }
+.only-text-mask .x-mask-msg-text {
+    background: transparent !important;
+    padding: 5px !important
+}
