--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <title>Вход</title>
     <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-triton/resources/theme-triton-all.css}"/>
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
-    <script type="text/javascript" th:src="@{/js/registration/app.js}"></script>
-    <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
+    <script type="text/javascript" th:src="@{/js/login/app.js}"></script>
 </head>
 <body>
 
