--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Вход</title>
@@ -8,7 +8,7 @@
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
-    <script type="text/javascript" th:src="@{/js/login/app.js}"></script>
+    <script type="text/javascript" th:src="@{/js/login/app.js}"a></script>
 </head>
 <body>
 
