--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -9,8 +9,10 @@
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
     <script type="text/javascript" th:src="@{/js/login/app.js}"a></script>
+    <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
 </head>
 <body>
-
+<input type="hidden" id="hasError" th:value="${session.get('error')}"/>
+<input type="hidden" id="hasLogout" th:value="${session.get('logout')}"/>
 </body>
 </html>
