main web menu, home page for user

--- a/src/main/resources/templates/settings/usdCourse.html
+++ b/src/main/resources/templates/settings/usdCourse.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/js/settings/usdCourse/css/UsdCourse.css}"/>
     <script type="text/javascript" th:src="@{/js/settings/usdCourse/app.js}"></script>
+    <script type="text/javascript" th:src="@{/js/components/buttons/MainPageButton.js}"></script>
 </head>
 <body>
 </body>
