--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Главное меню</title>
+    <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-triton/resources/theme-triton-all.css}"/>
+    <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
+    <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
+    <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
+    <script type="text/javascript" th:src="@{/js/main/app.js}"a></script>
+    <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
 </head>
 <body>
-
 </body>
 </html>
