--- a/src/main/resources/templates/userMain.html
+++ b/src/main/resources/templates/userMain.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Регистрация</title>
+    <title>Главная</title>
     <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}"/>
     <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-triton/resources/theme-triton-all.css}"/>
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
-    <script type="text/javascript" th:src="@{/js/registration/app.js}"a></script>
-    <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
-    <script type="text/javascript" th:src="@{/js/components/buttons/MainPageButton.js}"></script>
+    <script type="text/javascript" th:src="@{/js/mainUser/app.js}"></script>
 </head>
 <body>
 
