--- a/src/main/resources/static/css/UsdCourse.css
+++ b/src/main/resources/static/css/UsdCourse.css
@@ -1,17 +1,20 @@
 .saveBtn {
     background-color: #9FEFD1 !important;
     border-color: #1C9165 !important;
+    color: #404040 !important;
     background-image: none;
 }
 .blueButton {
     background-color: #A3CBEE !important;
     border-color: #1F5A90 !important;
+    color: #404040 !important;
     background-image: none;
 }
 .returnValueBtn {
     background-color: #ffffff !important;
     border-color: #919191 !important;
     border-width: 1px;
+    color: #404040 !important;
     box-shadow: none;
     background-image: none;
 }
