--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Главное меню</title>
     <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-triton/resources/theme-triton-all.css}"/>
-    <link rel="stylesheet" type="text/css" th:href="@{/css/Registration.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/Main.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/UsdCourse.css}"/>
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
