--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -15,19 +15,7 @@
     border-right: 1px solid #919191 !important;
 }
 
-.usd-course-icon-color {
-    color: #5fa2dd !important;
-}
-
-.variables-icon-color {
-    color: #5fa2dd !important;
-}
-
-.users-icon-color{
-    color: #5fa2dd !important;
-}
-
-.new-web-user-icon-color {
+.menu-icon-color {
     color: #5fa2dd !important;
 }
 
