--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -13,6 +13,7 @@
 
 .main-toolbar {
     border-right: 1px solid #919191 !important;
+    border-bottom: 1px solid #919191 !important;
 }
 
 .menu-icon-color {
