--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
-    <script type="text/javascript" th:src="@{/js/main/app.js}"a></script>
+    <script type="text/javascript" th:src="@{/js/main/app.js}"></script>
     <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
 </head>
 <body>
