api users reg back, refactor validator

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
     <script type="text/javascript" th:src="@{/js/main/app.js}"></script>
     <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
+    <script type="text/javascript" th:src="@{/js/util/ValidatorUtil.js}"></script>
 </head>
 <body>
 </body>
