--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" th:src="@{/extJS/theme-triton/theme-triton.js}"></script>
     <script type="text/javascript" th:src="@{/js/login/app.js}"a></script>
     <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
+    <script type="text/javascript" th:src="@{/js/util/ValidatorUtil.js}"></script>
 </head>
 <body>
 </body>
