--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" th:src="@{/js/util/Regex.js}"></script>
     <script type="text/javascript" th:src="@{/js/util/ValidatorUtil.js}"></script>
     <script type="text/javascript" th:src="@{/js/util/constants/HtmlConstants.js}"></script>
+    <script type="text/javascript" th:src="@{/js/util/ExtUtil.js}"></script>
 </head>
 <body>
 </body>
