--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -57,8 +57,8 @@
     font-weight: bold !important;
 }
 
-.greenColor {
-    color: green !important;
+.limeColor {
+    color: lime !important;
 }
 
 .redColor {
