edit win buttons

--- a/src/main/resources/static/css/Main.css
+++ b/src/main/resources/static/css/Main.css
@@ -42,9 +42,17 @@
     color: #404040 !important;
     background-image: none;
 }
+
 .blueButton {
     background-color: #A3CBEE !important;
     border-color: #1F5A90 !important;
+    color: #404040 !important;
+    background-image: none;
+}
+
+.redButton {
+    background-color: #ef9f9f !important;
+    border-color: #911c1c !important;
     color: #404040 !important;
     background-image: none;
 }
