--- a/src/main/resources/templates/apiDocumentation.html
+++ b/src/main/resources/templates/apiDocumentation.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Вход</title>
+    <title>Api-документация</title>
     <link rel="stylesheet" type="text/css" th:href="@{/extJS/theme-triton/resources/theme-triton-all.css}"/>
     <script type="text/javascript" th:src="@{/extJS/ext-all.js}"></script>
     <script type="text/javascript" th:src="@{/extJS/locale/locale-ru.js}"></script>
